Finished unit testing breeds routes and fixed bugs
