# routes/breeds.js
@@ -16,6 +16,8 @@ const { auth } = require('../controllers/auth');
 const { clamp } = require('../helpers/utils');
 const can = require('../permissions/breeds');
 
+const { validateBreed } = require('../controllers/validation');
+
 const router = new Router({ prefix: '/api/v1/breeds' });
 router.use(bodyParser());
 
@@ -38,22 +40,15 @@ const getAll = async ctx => {
 	try {
 		ctx.body = await breedModel.getAll(query, select, page, limit, order, direction);
 	} catch (err) {
-		ctx.status = 500;
+		ctx.status = 400;
 		ctx.body = err;
 	}
 };
 
 const getDogs = async ctx => {
 	const breedId = ctx.params.id;
-	let { select = [] } = ctx.request.query;
-	if (!Array.isArray(select)) select = Array(select);
-	try {
-		const dogs = await dogBreedModel.getByBreedId(breedId, select);
-		if (dogs) ctx.body = dogs;
-	} catch (err) {
-		ctx.status = 500;
-		ctx.body = err;
-	}
+	const dogs = await dogBreedModel.getByBreedId(breedId);
+	if (dogs.length) ctx.body = dogs;
 };
 
 /**
@@ -62,13 +57,8 @@ const getDogs = async ctx => {
  */
 const getBreed = async ctx => {
 	const breedId = ctx.params.id;
-	try {
-		const breed = await breedModel.getById(breedId);
-		if (breed) ctx.body = breed;
-	} catch (err) {
-		ctx.status = 500;
-		ctx.body = err;
-	}
+	const breed = await breedModel.getById(breedId);
+	if (breed) ctx.body = breed;
 };
 
 /**
@@ -82,17 +72,10 @@ const addBreed = async ctx => {
 		ctx.status = 403;
 		return;
 	}
-	try {
-		const body = ctx.request.body;
-		const breedId = await breedModel.add(body);
-		if (breedId) {
-			ctx.status = 201;
-			ctx.body = { ID: breedId, created: true, link: `${ctx.request.path}/${breedId}` };
-		}
-	} catch (err) {
-		ctx.status = 500;
-		ctx.body = err;
-	}
+	const body = ctx.request.body;
+	const breedId = await breedModel.add(body);
+	ctx.status = 201;
+	ctx.body = { ID: breedId, created: true, link: `${ctx.request.path}/${breedId}` };
 };
 
 /**
@@ -106,17 +89,12 @@ const updateBreed = async ctx => {
 		ctx.status = 403;
 		return;
 	}
-	try {
-		const breedId = ctx.params.id;
-		const breed = await breedModel.getById(breedId);
-		if (breed) {
-			const data = ctx.request.body;
-			const result = await breedModel.update(breedId, data);
-			if (result) ctx.body = { id: breedId, updated: true, link: ctx.request.path };
-		}
-	} catch (err) {
-		ctx.status = 500;
-		ctx.body = err;
+	const breedId = ctx.params.id;
+	const breed = await breedModel.getById(breedId);
+	if (breed) {
+		const data = ctx.request.body;
+		await breedModel.update(breedId, data);
+		ctx.body = { id: breedId, updated: true, link: ctx.request.path };
 	}
 };
 
@@ -126,29 +104,24 @@ const updateBreed = async ctx => {
  */
 const deleteBreed = async ctx => {
 	const { role } = ctx.state.user;
-	const permission = await can.modify(role);
+	const permission = await can.delete(role);
 	if (!permission.granted) {
 		ctx.status = 403;
 		return;
 	}
-	try {
-		const breedId = ctx.params.id;
-		const breed = await breedModel.getById(breedId);
-		if (breed) {
-			const result = await breedModel.delete(breedId);
-			if (result) ctx.body = { id: breedId, deleted: true };
-		}
-	} catch (err) {
-		ctx.status = 500;
-		ctx.body = err;
+	const breedId = ctx.params.id;
+	const breed = await breedModel.getById(breedId);
+	if (breed) {
+		await breedModel.delete(breedId);
+		ctx.body = { id: breedId, deleted: true };
 	}
 };
 
 router.get('/', getAll);
-router.post('/', auth, addBreed);
+router.post('/', auth, validateBreed, addBreed);
 
 router.get('/:id([0-9]+)', getBreed);
-router.put('/:id([0-9]+)', auth, updateBreed);
+router.put('/:id([0-9]+)', auth, validateBreed, updateBreed);
 router.del('/:id([0-9]+)', auth, deleteBreed);
 
 router.get('/:id([0-9]+)/dogs', getDogs);
